@@ -138,4 +138,15 @@ CLICON_XMLDB_DIR      localstatedir/APPNAME
 # Eg in nginx: fastcgi_pass unix:/www-data/clicon_restconf.sock;
 CLICON_RESTCONF_PATH /www-data/fastcgi_restconf.sock
 
+# Set if you want to use old obsolete cligen expand variable syntax 
+# Migration: Set to 0 and change all user-defined cli completion callbacks
+# E.g. expand_dbvar("db fmt") ->expandv_dbvar("db","fmt") in all your cli spec files
+CLICON_CLIGEN_EXPAND_SINGLE_ARG 0
+
+# Set if you want to use old obsolete cligen callback variable syntax 
+# Migration: Set to 0 and change all user-defined cli callbacks in your cli spec files
+# E.g cmd, callback("single arg"); -> cmd, callback("two" "args");
+# But there are still many pre-defined in callbacks, eg in cli_common.c that are not made 
+# for this.
+CLICON_CLIGEN_CALLBACK_SINGLE_ARG 1
 
